--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "dagster-uc"
 version = "0.2.2"
-authors = [{name = "Stefan Verbruggen", email="27513235+sverbruggen@users.noreply.github.com"}, {name = "Ion Koutsouris"}]
+authors = [
+    {name = "Stefan Verbruggen"}, 
+    {name = "Ion Koutsouris"},
+    ]
 description = "CLI for managing user code deployments of a Dagster instance that was deployed on kubernetes."
 readme = "README.md"
 requires-python = ">=3.9"
