--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dagster-uc"
-version = "0.2.4"
+version = "0.3.0"
 authors = [
     {name = "Stefan Verbruggen"}, 
     {name = "Ion Koutsouris"},
@@ -20,6 +20,7 @@ dependencies = [
     "kr8s < 1.0",
     "pyhelm3==0.3.3",
     "typer==0.12.3",
+    "tomli",
     "pyyaml",
     "pytz"
 ]
