--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ classifiers = [
     "Programming Language :: Python :: 3.13"
 ]
 dependencies = [
-    "kr8s>=0.20,<1.0",
-    "pyhelm3==0.3.3",
-    "typer==0.12.3",
+    "kr8s>=0.20.1,<1.0",
+    "pyhelm3>=0.3.3",
+    "typer>=0.15.1",
     "tomli",
     "pyyaml",
     "pytz"
