--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,11 @@ classifiers = [
 ]
 dependencies = [
     "kr8s>=0.20.1,<1.0",
-    "pyhelm3>=0.3.3",
     "typer>=0.15.1",
     "tomli",
     "pyyaml",
-    "pytz"
+    "pytz",
+    "pydantic>=2",
 ]
 
 [tool.uv]
@@ -129,6 +129,9 @@ lint.ignore = [
 # Allow autofix for all enabled rules (when `--fix`) is provided.
 lint.fixable = ["ALL"]
 
+# Allow unused variables when underscore-prefixed.
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
@@ -156,9 +159,6 @@ exclude = [
 ]
 # Same as Black.
 line-length = 100
-
-# Allow unused variables when underscore-prefixed.
-lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Assume Python 3.10
 target-version = "py310"
