--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dagster-uc"
-version = "0.4.0"
+version = "0.5.0"
 authors = [
     {name = "Stefan Verbruggen"},
     {name = "Ion Koutsouris"},
@@ -31,7 +31,8 @@ dev-dependencies = [
     "pyright",
     "pytest",
     "pip",
-    "build"
+    "build",
+    "typos>=1.31.1",
 ]
 
 [project.urls]
