--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,13 +17,16 @@ jobs:
   lint:
     name: Linting checks
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
       - name: Install pypa/build
         run: pip install rust-just && just ci-setup
       - name: CI-check
@@ -38,7 +41,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version:  ${{ matrix.python-version }}
       - name: Install pypa/build
         run: pip install rust-just && just ci-setup
       - name: Execute tests
