Feat adjust pod name prefix (#34)
* Added control of the UC name to the config file.  This allows for more control over the pod-names.

* handling an issue when dagster-uc is downloaded without build dependencies

* bumping version

* ruff updates

---------

Co-authored-by: Mack Ott <mack.ott@asml.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dagster-uc"
-version = "0.5.5"
+version = "0.5.6"
 authors = [
     {name = "Stefan Verbruggen"},
     {name = "Ion Koutsouris"},
@@ -23,6 +23,7 @@ dependencies = [
     "pyyaml",
     "pytz",
     "pydantic>=2",
+    "packaging>=25.0",
 ]
 
 [tool.uv]
